# Proyecto-de-Software

./: Dockerfile.flask  README.md  docker-compose.yml
src/: app.py  pyproject.toml
